AYU-Side-Hidden Gems Playlist-back/src/main/java/com/example/ayusidehiddengemsplaylistback/error/exception/EntityNotFoundException.java
package com.example.ayusidehiddengemsplaylistback.error.exception;

import com.example.ayusidehiddengemsplaylistback.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {
    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}